--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.0'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.3.0'
 }
